Estrutura de pastas para administracao

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<servlet>
 		<servlet-name>login</servlet-name>
 		<servlet-class>br.unip.tccp42.visao.web.servlet.LoginServlet</servlet-class>
-	</servlet>	
+	</servlet>
+	<servlet>
+		<servlet-name>usuario</servlet-name>
+		<servlet-class>br.unip.tccp42.visao.web.servlet.UsuarioServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/servlet/login/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>usuario</servlet-name>
+		<url-pattern>/servlet/usuario/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
